--- a/public/index.html
+++ b/public/index.html
@@ -19,9 +19,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>13 Most Haunted Places in Pittsburgh, PA</title>
   </head>
   <body>
+      <iframe src="https://snazzymaps.com/embed/103686" width="100%" height="100%" style="border:none;"></iframe>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
